syntax = "proto3";

package metrics;

option go_package = "proto/pm";

message CounterMetric {
  string name = 1;
  int64 delta = 2;
}

message GaugeMetric {
  string name = 1;
  double value = 2;
}

enum Status {
  OK = 0;
  ERROR = 1;
}

message Response {
  Status status = 1;
  string message = 2;
}

service Metrics {
  rpc AddCounter(CounterMetric) returns (Response);
  rpc AddGauge(GaugeMetric) returns (Response);
}